<resources>
    <string name="app_name">1037号树洞</string>
    <string name="button_login">登录</string>
    <string name="your_email"> 华中大邮箱</string>
    <string name="passwd_pls">输入密码</string>
    <string name="register_title">邮箱账户注册</string>
    <string name="hint_setpassword"> 请设置密码</string>
    <string name="hint_verifypassword"> 请确认密码</string>
    <string name="hint_input_verifycode"> 请输入验证码</string>
    <string name="nav_home">Home</string>
    <string name="nav_mine">Mine</string>
    <string name="nav_message">Message</string>
    <string name="register_botton">注册</string>
    <string name="getVerifyCode">获取验证码</string>
    <string name="loginRegisterButton">注册</string>
    <string name="hust_edu_cn">\@ hust.edu.cn</string>
    <string name="no1037">1037</string>
    <string name="name_half">号树洞</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="reply_hint">回复</string>
    <string name="reply_button_hint">发布</string>
    <string name="re_login">  切换账号  </string>
</resources>