<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#445A5C">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="194dp"
            android:contentDescription="TODO"
            android:src="@drawable/shape_register_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginTop="65dp"
            android:background="@drawable/shape_edit"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginTop="260dp"
            android:background="@drawable/shape_edit"
            android:hint="@string/hint_setpassword"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password_verify"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_edit"
            android:hint="@string/hint_verifypassword"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_verifycode"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_edit"
            android:hint="@string/hint_input_verifycode"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email">

        </com.google.android.material.textfield.TextInputEditText>


        <TextView
            android:id="@+id/textView_register_title"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/register_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_textinput_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="@+id/edit_background"
            app:layout_constraintTop_toTopOf="@+id/edit_background">

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="420dp"
            android:background="@drawable/shape_register_button"
            android:text="注册"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>